test/expected/simple-next-tick.txt
/scripts/simple-next-tick.js:9
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-next-tick.js:9:9)
    at nextTickCallbackWith0Args (node.js:433:9)
    at process._tickCallback (node.js:362:13)
    at Function.Module.runMain (module.js:433:11)
    at startup (node.js:141:18)
    at node.js:977:3
    at Object.<anonymous> (/scripts/simple-next-tick.js:8:9)
    at Module._compile (module.js:399:26)
    at Object.Module._extensions..js (module.js:406:10)
    at Module.load (module.js:345:32)
    at Function.Module._load (module.js:302:12)
    at Function.Module.runMain (module.js:431:10)
    at startup (node.js:141:18)
    at node.js:977:3
